[package]
name = "aoc"
version = "0.6.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.2"
itertools = "0.10.5"
memoize = "0.3.3"
nom = "7.1.1"
pico-args = "0.5.0"
rug = "1.18.0"
